# mcp-session-router

./: .gitignore  LICENSE  README.md  pyproject.toml
src/session_manager/: server.py  state.py
src/session_manager/lifecycle/: __init__.py  cleanup.py
src/session_manager/models/: __init__.py  config.py  fields.py  session.py
src/session_manager/storage/: __init__.py  file_store.py
src/session_manager/wrapper/: command_matcher.py  handoff_formatter.py  main.py  pty_wrapper.py  socket_client.py  socket_server.py  virtual_screen.py
tests/integration/: mock_claude.py  test_intercept_scenarios.py  test_scenarios.py  test_wrapper_flow.py
tests/unit/: test_channel_notification.py  test_cleanup.py  test_command_matcher.py  test_config.py  test_fields.py  test_handoff_formatter.py  test_main.py  test_pty_wrapper.py  test_server_tools.py  test_session.py  test_socket_client.py  test_socket_server.py  test_state.py  test_storage.py  test_virtual_screen.py
